--- a/Home/templates/student/dashboard.html
+++ b/Home/templates/student/dashboard.html
@@ -4,10 +4,10 @@
 
 <div class="flex w-full flex-wrap md:!flex-nowrap lg:space-x-4 py-4 lg:justify-around">
     <div class="!w-full !min-w-80 md:!w-1/4 rounded-2xl p-4">
-        <div class="bg-white min-h-[calc(100vh-200px)] border rounded-2xl overflow-x-hidden overflow-y-auto shadow-md">
+        <div class="bg-white min-h-[calc(100vh-200px)] border rb-notice rounded-2xl overflow-x-hidden overflow-y-auto shadow-md">
             <h2 class="text-base text-center uppercase py-1.5 bg-slate-800 text-white font-bold mb-2">Noticeboard</h2>
 
-          <div class="">
+          <div class="relative">
             <div class="flex flex-col">
               {% for notice in notices %}
                 <div class="flex group border-b hover:!bg-gray-300 px-4 flex-col">
@@ -16,7 +16,7 @@
                     <p class="text-xs uppercase font-semibold text-gray-700">{{ notice.created_at|date:"d M Y" }}</p>
                   </div>
                 </div>
-                <div class="modal fade" id="notice{{notice.id}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="updateStudentLable" aria-hidden="true">
+                <div style="" class="modal fade" id="notice{{notice.id}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="1" aria-labelledby="updateStudentLable" aria-hidden="true">
                   <div class="modal-dialog">
                       <div class="modal-content">
                           <div class="flex flex-col p-4">
@@ -37,10 +37,15 @@
         </div>
     </div>
     <div class="!min-w-72 !w-full md:!w-3/4 p-4">
-        <!-- Boxes -->
-        <div class="flex flex-wrap justify-center lg:justify-between space-y-4 sm:space-x-2 sm:space-y-0 lg:space-x-6">
-            <div
-      class="w-60 h-60 group/ls !bg-blue-200 mb-4 hover:!bg-slate-900 transition-all duration-700 dark:!bg-slate-900 !rounded-2xl hover:!shadow-lg">
+      
+      {% if att_error %}
+        <div class="alert mb-5 alert-warning" role="alert">
+          Your average attendance is below 75%. Please maintain your attendance to avoid any issues.
+        </div>
+      {% endif %}
+
+      <div class="flex flex-wrap justify-center lg:justify-between space-y-4 sm:space-x-2 sm:space-y-0 lg:space-x-6">
+      <div class="w-60 h-60 group/ls !bg-blue-200 mb-4 hover:!bg-slate-900 transition-all duration-700 dark:!bg-slate-900 !rounded-2xl hover:!shadow-lg">
       <a href="{% url "assignments-student" %}" class="h-60 relative w-60 flex justify-end flex-col">
         {% comment %} <div class="absolute w-7 h-7 p-1 group-hover/ls:bg-white bg-slate-900 rounded-full top-3 right-3" >
           <svg class="w-5 h-5 dark:text-gray-10 bg-transparent text-white group-hover/ls:!text-slate-900"
@@ -95,6 +100,15 @@
     </div>
 </div>
 
+<div class="table-responsive border mt-5 border-slate-300 rounded-2xl">
+  <div class="mb-4 mt-2 text-xl text-center font-bold">
+    Time Table
+  </div>
+  <div style="margin-bottom: -16px !important;">
+  {{ html_table | safe }}
+  </div>
+</div>
+
 <div class="mt-5 border border-slate-300 overflow-hidden rounded-2xl">
     <div class="mb-4 mt-2 text-xl text-center font-bold">
       Your Enquiries
@@ -144,7 +158,8 @@
                         <th>Mst-1 Marks</th>
                         <th>Mst-2 Marks</th>
                         <th>Assignment Marks</th>
-                        {% comment %} <th>Total Marks</th> {% endcomment %}
+                        <th>Attendance Marks</th>
+                        <th>Total Marks (%)</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -161,9 +176,12 @@
                             <td>
                                 {{ mark.assignment }}
                             </td>
-                            {% comment %} <td>
+                            <td>
+                              {{ mark.get_att_marks }}
+                            </td>
+                            <td>
                                 {{ mark.get_total_marks }}
-                            </td> {% endcomment %}
+                            </td> 
                         </tr>
                     {% endfor %}
                 </tbody>
