--- a/Home/templates/student/dashboard.html
+++ b/Home/templates/student/dashboard.html
@@ -4,33 +4,18 @@
 
 <div class="flex w-full flex-wrap md:!flex-nowrap lg:space-x-4 py-4 lg:justify-around">
     <div class="!w-full !min-w-80 md:!w-1/4 rounded-2xl p-4">
-        <div class="bg-white min-h-[calc(100vh-200px)] border rb-notice rounded-2xl overflow-x-hidden overflow-y-auto shadow-md">
+        <div class="bg-white border rb-notice rounded-2xl shadow-md">
             <h2 class="text-base text-center uppercase py-1.5 bg-slate-800 text-white font-bold mb-2">Noticeboard</h2>
 
-          <div class="relative">
+          <div class="relative rb-nt-sc overflow-x-hidden overflow-y-auto">
             <div class="flex flex-col">
               {% for notice in notices %}
                 <div class="flex group border-b hover:!bg-gray-300 px-4 flex-col">
                   <div data-bs-toggle="modal" data-bs-target="#notice{{notice.id}}" class="my-2 group-hover:!bg-gray-300 cursor-pointer">
-                    <h2 class="text-sm font-bold text-slate-950">{{ notice.title }}</h2>
+                    <h2 class="text-sm uppercase font-bold text-slate-950">{{ notice.title }}</h2>
                     <p class="text-xs uppercase font-semibold text-gray-700">{{ notice.created_at|date:"d M Y" }}</p>
                   </div>
                 </div>
-                <div style="" class="modal fade" id="notice{{notice.id}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="1" aria-labelledby="updateStudentLable" aria-hidden="true">
-                  <div class="modal-dialog">
-                      <div class="modal-content">
-                          <div class="flex flex-col p-4">
-                            <p class="text-sm uppercase font-semibold text-gray-700">{{ notice.created_at|date:"d M Y" }}</p>
-                                <h2 class="text-lg font-bold mt-2 text-slate-950">{{ notice.title }}</h2>
-                              <p class="text-sm mt-4 dark:text-gray-400">{{ notice.message }}</p>
-                              {% if notice.attachment %}
-                                <p class="mt-3"> <span class="font-semibold"> attached file:</span> <a href="{{ notice.attachment.url }}" class="text-blue-500">Download</a></p>
-                              {% endif %}
-                          </div>
-                        <div data-bs-dismiss="modal" class="text-center items-center px-4 py-1 text-base font-medium text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500">Close</div>
-                      </div>
-                  </div>
-              </div>
               {% endfor %}
             </div>
           </div>
@@ -100,17 +85,17 @@
     </div>
 </div>
 
-<div class="table-responsive border mt-5 border-slate-300 rounded-2xl">
-  <div class="mb-4 mt-2 text-xl text-center font-bold">
+<div class="table-responsive rb-tbh border mt-5 border-slate-300 rounded-2xl" >
+  <div class="my-2 text-xl text-center font-bold cheltenham">
     Time Table
   </div>
-  <div style="margin-bottom: -16px !important;">
+  <div class="rb-tbh" style="margin-bottom: -16px !important;">
   {{ html_table | safe }}
   </div>
 </div>
 
 <div class="mt-5 border border-slate-300 overflow-hidden rounded-2xl">
-    <div class="mb-4 mt-2 text-xl text-center font-bold">
+    <div class="mb-4 mt-2 text-xl text-center font-bold cheltenham">
       Your Enquiries
     </div>
     {%if queries %}
@@ -146,7 +131,7 @@
   </div>
 
   <div class="modal fade" id="viewMarks" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="updateStudentLable" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog rb-mdl">
         <div class="modal-content">
           <div class="bg-slate-900 text-center text-white py-2"> Marks </div>
           <div class="table-responsive">
@@ -192,5 +177,22 @@
     </div>
   </div>
 
+  {% for notice in notices %}
+  <div style="" class="modal fade" id="notice{{notice.id}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="1" aria-labelledby="updateStudentLable" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="flex flex-col p-4">
+              <p class="text-sm uppercase font-semibold text-gray-700">{{ notice.created_at|date:"d M Y" }}</p>
+                  <h2 class="text-lg font-bold mt-2 text-slate-950">{{ notice.title }}</h2>
+                <p class="text-sm mt-4 dark:text-gray-400">{{ notice.message }}</p>
+                {% if notice.attachment %}
+                  <p class="mt-3"> <span class="font-semibold"> attached file:</span> <a href="{{ notice.attachment.url }}" class="text-blue-500">Download</a></p>
+                {% endif %}
+            </div>
+          <div data-bs-dismiss="modal" class="text-center items-center px-4 py-1 text-base font-medium text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500">Close</div>
+        </div>
+    </div>
+</div>
+{% endfor %}
 
 {% endblock %}
