--- a/Home/templates/student_dashboard.html
+++ b/Home/templates/student_dashboard.html
@@ -4,7 +4,7 @@
 {% block layout %}
 <div id="main-content" class="relative w-full p-4 h-full overflow-y-auto bg-gray-50 dark:bg-gray-900">
     
-    <div class="bg-slate-800 flex justify-center hover:bg-red-900 items-center w-10 h-10 shadow-xl fixed cursor-pointer right-5 bottom-5 rounded-full " data-bs-toggle="modal" data-bs-target="#addQueries">
+    <div class="bg-slate-800 z-i9999 flex justify-center hover:bg-red-900 items-center w-10 h-10 shadow-xl fixed cursor-pointer right-5 bottom-5 rounded-full " data-bs-toggle="modal" data-bs-target="#addQueries">
         <svg class="flex-shrink-0 w-6 h-6 shadow-md !text-white transition duration-75 group-hover:!text-gray-200 dark:text-gray-400 dark:group-hover:text-white" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-2 0c0 .993-.241 1.929-.668 2.754l-1.524-1.525a3.997 3.997 0 00.078-2.183l1.562-1.562C15.802 8.249 16 9.1 16 10zm-5.165 3.913l1.58 1.58A5.98 5.98 0 0110 16a5.976 5.976 0 01-2.516-.552l1.562-1.562a4.006 4.006 0 001.789.027zm-4.677-2.796a4.002 4.002 0 01-.041-2.08l-.08.08-1.53-1.533A5.98 5.98 0 004 10c0 .954.223 1.856.619 2.657l1.54-1.54zm1.088-6.45A5.974 5.974 0 0110 4c.954 0 1.856.223 2.657.619l-1.54 1.54a4.002 4.002 0 00-2.346.033L7.246 4.668zM12 10a2 2 0 11-4 0 2 2 0 014 0z" clip-rule="evenodd"></path></svg>
     </div>
 
@@ -15,14 +15,7 @@
     </main>
 
     <div class="modal fade" id="addQueries" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="updateStudentLable" aria-hidden="true">
-        <div cla<div class="flex flex-col justify-center" >
-            <p class="text-sm font-extrabold text-gray-900 dark:text-white" role="none">
-                {{ user.get_full_name }}
-            </p>
-            <p class="text-sm text-gray-900 truncate dark:text-gray-300" role="none">
-                {%if user.is_faculty %} {{ user.faculty.subject }} {% elif user.is_student %} Student {% else %} Admin {% endif %}
-            </p>
-        </div>ss="modal-dialog">
+        <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="updateStudentLable">Student Enquiry</h1>
