--- a/Home/templates/base.html
+++ b/Home/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="{% static "img/IntelliTeach.png" %}">
     <link rel="stylesheet" href="{% static "public/css/base.css" %}">
     <link rel="stylesheet" href="{% static "public/css/style.css" %}">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>{{title}}</title>
 </head>
 
