--- a/Home/templates/dash-layout.html
+++ b/Home/templates/dash-layout.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="{% static "public/css/admin.min.css" %}">
     <link rel="stylesheet" href="https://cdn.datatables.net/2.0.1/css/dataTables.bootstrap5.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/2.0.1/css/dataTables.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body id="page-top" class="">
