--- a/Home/templates/student/marks-list.html
+++ b/Home/templates/student/marks-list.html
@@ -54,35 +54,35 @@
             </tr>
         </thead>
         <tbody>
-            {% for data in student_data %}
+            {% for data in marks %}
             <input type="hidden" value="{{ data.student.id }}" class="form-control" id="id" name="id" required>
             <tr class="rb-table-row" id="mark-{{ data.student.id }}">
-                {% if data.student_marks_count > 0 %}
+                {% comment %} {% if data.student_marks_count > 0 %} {% endcomment %}
                 <td>{{ data.student.user.get_full_name }}</td>
                 <td>
-                    <input type="number" value="{{ data.student.student_marks.first.mst1 }}" class="form-control"
-                        id="mst1" name="mst1" required>
+                    <input type="number" value="{{ data.mst1 }}" class="form-control"
+                        id="mst1" name="mst1" >
                 </td>
                 <td>
-                    <input type="number" value="{{ data.student.student_marks.first.mst2 }}" class="form-control"
-                        id="mst2" name="mst2" required>
+                    <input type="number" value="{{ data.mst2 }}" class="form-control"
+                        id="mst2" name="mst2" >
                 </td>
                 <td>
-                    <input type="number" value="{{ data.student.student_marks.first.assignment }}" class="form-control"
-                        id="assignment" name="assignment" required>
+                    <input type="number" value="{{ data.assignment }}" class="form-control"
+                        id="assignment" name="assignment" >
                 </td>
-                {% else %}
-                <td>{{ data.student.user.get_full_name }}</td>
+                {% comment %} {% else %} {% endcomment %}
+                {% comment %} <td>{{ data.student.user.get_full_name }}</td>
                 <td>
-                    <input type="number" class="form-control" id="mst1" name="mst1" required>
-                </td>
-                <td>
-                    <input type="number" class="form-control" id="mst2" name="mst2" required>
+                    <input type="number" class="form-control" id="mst1" name="mst1" >
                 </td>
                 <td>
-                    <input type="number" class="form-control" id="assignment" name="assignment" required>
+                    <input type="number" class="form-control" id="mst2" name="mst2" >
                 </td>
-                {% endif %}
+                <td>
+                    <input type="number" class="form-control" id="assignment" name="assignment" >
+                </td>
+                {% endif %} {% endcomment %}
             </tr>
             {% endfor %}
         </tbody>
