--- a/Home/templates/student/dashboard.html
+++ b/Home/templates/student/dashboard.html
@@ -136,6 +136,14 @@
       var chart = new Chart(ctx, {
           type: 'line',
           data: data,
+          options: {
+            scales: {
+              y: {
+                min: 0,
+                max: 40,
+              }
+            }
+          }
       });
   </script>
 </div>
