Refactor HTML templates and update CSS styles

--- a/Admin/templates/admin-layout.html
+++ b/Admin/templates/admin-layout.html
@@ -96,7 +96,7 @@
                 {% endif %}
                 {% if user.is_faculty %}
                     <li>
-                        <a href="{% url "attendance_one" user.faculty.subject %}"
+                        <a href="{% url "attendance_faculty" %}"
                             class="flex items-center w-full p-2 text-base text-gray-900 transition duration-75 rounded-lg group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700"
                             aria-controls="dropdown-layouts" data-collapse-toggle="dropdown-layouts">
                             <svg class="flex-shrink-0 w-6 h-6 !text-gray-800 transition duration-75 group-hover:text-gray-900 dark:text-gray-400 dark:group-hover:text-white"
@@ -230,6 +230,13 @@
         catch{
             console.log("got error")
         } 
+    });
+
+    document.getElementById('closeModalBtn').addEventListener('click', function() {
+        let flbt = document.getElementById("faceDete")
+        flbt.classList.remove('active');
+        let msg = document.getElementById('msgDt')
+        msg.innerHTML = '';
     });
 </script>
 
