--- a/Home/templates/student/marks-list.html
+++ b/Home/templates/student/marks-list.html
@@ -6,8 +6,8 @@
     <div class="mb-3">
         <h4 class="text-base font-semibold">Marks</h4>
     </div>
-    <div class="table-responsive">
-        <table id="data-marks" class="table table-bordered nowrap w-100">
+    <div class="">
+        <table id="data-marks" class="table rb_table table-bordered nowrap w-100">
             <thead>
                 <tr>
                     <th>Name</th>
