--- a/teachers/templates/teachers.html
+++ b/teachers/templates/teachers.html
@@ -17,8 +17,8 @@
             Add Teacher
         </button>
     </div>
-    <div class="table-responsive" >  
-      <table id="data-students" class="table dt-responsive table-hover table-bordered nowrap w-100">
+    <div class="" >  
+      <table id="data-students" class="table rb_table dt-responsive table-hover table-bordered nowrap w-100">
         <thead class="thead-light">
           <tr>
             <th scope="col">#</th>
