--- a/Admin/templates/table.html
+++ b/Admin/templates/table.html
@@ -31,7 +31,7 @@
                     aria-label="Close"></button> {%endcomment %}
             </div>
             <div class="modal-body">
-                <form id="assignmentForm" enctype="multipart/form-data" method="POST" action="{% url 'time_table' %}">
+                <form id="saveTable" enctype="multipart/form-data" method="POST" action="{% url 'time_table' %}">
                     {% csrf_token %}
                     <div class="form-group mb-3">
                         <label class="form-label" for="day">Day</label>
@@ -41,8 +41,10 @@
                             <option value="Wednesday">Wednesday</option>
                             <option value="Thursday">Thursday</option>
                             <option value="Friday">Friday</option>
-                            <!-- <option value="Saturday">Saturday</option>
-                        <option value="Sunday">Sunday</option> -->
+                            {% if weekends %}
+                            <option value="Saturday">Saturday</option>
+                            <option value="Sunday">Sunday</option>
+                            {% endif %}
                         </select>
                     </div>
                     <div class="form-group mb-3">
