--- a/Home/templates/dash-layout.html
+++ b/Home/templates/dash-layout.html
@@ -261,7 +261,16 @@
     <script src="https://cdn.datatables.net/2.0.1/js/dataTables.bootstrap5.js"></script>
     {% comment %} <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script> {% endcomment %}
     {% comment %} <script src="https://code.jquery.com/jquery-3.7.1.js"></script> {% endcomment %}
+    <script>
+        let table = document.getElementsByTagName('rb_table');
+        for (let i = 0; i < table.length; i++) {
+            table[i].classList.add('dt-responsive');
+            table[i].classList.add('w-100');
+            table[i].classList.add('nowrap');
+        }
+    </script>
     <script> 
+        new DataTable('.rb_table');
         new DataTable('#data-students'); 
         new DataTable('#data-marks'); 
     </script>
