--- a/student/templates/topics.html
+++ b/student/templates/topics.html
@@ -14,8 +14,8 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
   <h2 class="text-base">Topics</h2>
 </div>
-<div class="table-responsive">
-  <table id="data-topics" class="table dt-responsive table-hover table-bordered nowrap w-100">
+<div class="">
+  <table id="data-topics" class="table rb_table dt-responsive table-hover table-bordered nowrap w-100">
     <thead class="thead-light">
       <tr>
         <th scope="col">#</th>
