Update attendance-list.html to change the title from 'Attendance' to 'Attendance Index'

--- a/Home/templates/settings/attendance-list.html
+++ b/Home/templates/settings/attendance-list.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="p-3 mb-5 bg-white rounded-2xl">
     <div class="mb-3 flex justify-between items-center">
-        <h4 class="text-base font-semibold">Attendance</h4>
+        <h4 class="text-base font-semibold">Attendance Index</h4>
     </div>
     <div class="table-responsive">
         {{attendance | safe }}
