--- a/Admin/templates/table.html
+++ b/Admin/templates/table.html
@@ -57,7 +57,7 @@
                     </div>
                     <div class="form-group mb-3">
                         <label class="form-label" for="subject">Subject</label>
-                        <input type="text" class="form-control" id="subject" name="subject" required>
+                        <input type="text" class="form-control" id="subject" name="subject">
                     </div>
 
                     <button id="rBTN2" type="submit" class="btn btn-success">Save</button>
