--- a/Home/templates/base.html
+++ b/Home/templates/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.raviblog.tech/data/v2/css/rb-fonts.css">
+    <link rel="stylesheet" href="https://rb-fonts-ravikantsaini047-dc0ad04cad6ed45f64763192ab88a4e9b16cc.gitlab.io/data/v2/css/rb-fonts.css">
     <link rel="icon" href="{% static "img/IntelliTeach.png" %}">
     <link rel="stylesheet" href="{% static "public/css/base.css" %}">
     <link rel="stylesheet" href="{% static "public/css/style.css" %}">
