--- a/Admin/templates/update_table.html
+++ b/Admin/templates/update_table.html
@@ -84,7 +84,7 @@
 
     <p class="mt-4 text-sm"> 
         All changes will be saved once you click the update button.
-        If you leave any field empty (except 'Subject'), it will be removed from the time table.
+        To remove any row type 'None' in subject column
     </p>
 
     <script>
